2026/kubernetes/deployment-with-configmap-and-sidecar-container.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: configmap-sidecar-container
    labels:
        app.kubernetes.io/name: configmap-sidecar-container
spec:
    replicas: 3
    selector:
        matchLabels:
            app.kubernetes.io/name: configmap-sidecar-container
    template:
        metadata:
            labels:
                app.kubernetes.io/name: configmap-sidecar-container
        spec:
            volumes:
              - name: shared-data
                emptyDir: {}
              - name: config-volume
                configMap:
                    name: color
            containers:
              - name: nginx
                image: nginx
                volumeMounts:
                  - name: shared-data
                    mountPath: /usr/share/nginx/html
