2026/kubernetes/deployment-with-configmap-as-volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: configmap-volume
    labels:
        app.kubernetes.io/name: configmap-volume
spec:
    replicas: 3
    selector:
        matchLabels:
            app.kubernetes.io/name: configmap-volume
    template:
        metadata:
            labels:
                app.kubernetes.io/name: configmap-volume
        spec:
            containers:
              - name: alpine
                image: alpine:3
                command:
                    - /bin/sh
                    - -c
                    - while true; do echo "$(date) My preferred sport is $(cat /etc/config/sport)";
                      sleep 10; done;
                ports:
                  - containerPort: 80
                volumeMounts:
                  - name: config-volume
                    mountPath: /etc/config
            volumes:
              - name: config-volume
                configMap:
                    name: sport
