2026/kubernetes/endpointslice.yml
apiVersion: v1
kind: Service
metadata:
    name: my-service
spec:
    ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: 9376

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
    name: my-service-1
    kubernetes.io/service-name: my-service
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 9376
endpoints:
  - addresses:
    - "10.0.0.1"
