2026/kubernetes/gatewayapi.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: example-class
spec:
    controllerName: example.com/gateway-controller

---
apiVersion: gateway.networking.k8s/v1
kind: Gateway
metadata:
    name: example-gateway
    namespace: example-namespace
spec:
    gatewayClassName: example-class
    listeners:
      - name: http
        protocol: HTTP
        port: 80
        hostname: "www.example.com"
        allowedRoutes:
            namespaces:
                from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: example-httprout
spec:
    parentRefs:
      - name: example-gateway
    hostnames:
      - "www.example.com"
    rules:
      - matches:
          - path:
                type: PathPrefix
                value: /login
        backendRefs:
          - name: example-svc
            port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
    name: example-grpcroute
spec:
    parentRefs:
      - name: example-gateway
    hostnames:
      - "svc.example.com"
    rules:
      - matches:
          - method:
                service: com.example
                method: Login
        backendRefs:
        - name: example-svc
          port: 50051
